made child friendly

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             anim o nostrud praetermissum. Est ut minim pariatur.Id ad quorum duis quem se
             elit constias tractavissent non in veniam quamquam vidisse, amet ab quamquam.
             Mentitum legam voluptate offendit. Eiusmod multos de voluptate fidelissimae, de
-            duis praesentibus.<img src="images/tree1.png" alt="image of tree smiling">
+            duis praesentibus.<img src="images/tree12.png" alt="image of tree smiling">
           </p>
           <p>
             Amet quibusdam in eiusmod ut se summis laborum vidisse, quibusdam ea quem, elit
@@ -51,7 +51,13 @@
             concursionibus de non quorum incididunt laboris. Aute te nescius ubi labore,
             singulis e dolor laboris ubi in eu graviterque, ab fugiat fidelissimae. Magna
             offendit qui sunt multos. In esse quamquam ad mentitum quis laboris cupidatat eu
-            vidisse quem est incididunt firmissimum ut si legam fabulas.
+            vidisse.
+          </p>
+          <p>
+            Quo quae vidisse o iis summis proident deserunt. Et quis eu quorum, noster
+            singulis ad aliqua culpa. Ea magna malis iis nescius iis ubi consequat de
+            quibusdam.
+            <img src="images/tree7.png" alt="image of a palm tree">
           </p>
         </div><!--close div 1-->
         <div class="three_columns" id="column_2">
@@ -68,18 +74,6 @@
               <img src="images/image4.jpg" alt="image of a fallen tree">
               <img src="images/image5.jpg" alt="image of a fallen tree">
             </div>
-          <p>
-            Quo quae vidisse o iis summis proident deserunt. Et quis eu quorum, noster
-            singulis ad aliqua culpa. Ea magna malis iis nescius iis ubi consequat de
-            quibusdam.Fabulas irure an quamquam familiaritatem id expetendis amet anim
-            incurreret eram, de sunt aliquip, consequat et quis expetendis, duis officia ex
-            reprehenderit, a sunt mandaremus, occaecat exercitation aut fabulas, aute ita e
-            quorum vidisse. Et legam anim anim ingeniis, quis quibusdam de tractavissent,
-            vidisse tamen tempor sed fore, iis veniam sed minim, ubi et exercitation e ab
-            sint aute velit vidisse, velit pariatur eruditionem o deserunt quid offendit
-            possumus. Ita labore praetermissum. In eram arbitrantur ut legam probant
-            philosophari.
-          </p>
         </div>
         <div class="three_columns" id="column_3">
           <p>
@@ -100,16 +94,27 @@
             <img src="images/tree3.png" alt="image of a palm tree">
             Ullamco de aute ab amet appellat e voluptatibus. Eiusmod si possumus de an
             multos familiaritatem et velit nescius reprehenderit do anim arbitrantur
-            doctrina duis laborum, veniam pariatur voluptatibus, dolore exercitation
+            doctrina duis laborum, veniam pariatur voluptatibus, dolore
             litteris malis ingeniis an ubi ullamco aut voluptate e eu tamen illustriora. Non
             sed aliqua dolor minim nam veniam occaecat o dolor ipsum.Tamen est nescius an
-            esse o probant enim proident eiusmod, doctrina te sint excepteur ubi te quis
-            cillum culpa laborum ne multos officia est quibusdam, voluptate si aliqua, hic
+            esse o probant enim proident eiusmod, doctrina te sint ubi te quis
+            cillum culpa laborum ne multos officia est quibusdam, si aliqua, hic
             legam ingeniis probant, laboris summis quae ex fugiat. Iis tamen voluptate
             constias, quo illum nescius eiusmod an do noster imitarentur in legam fabulas
-            iis eiusmod. O fugiat arbitror possumus quo ita tempor tempor de incurreret o
+            iis eiusmod. O fugiat arbitror possumus quo ita tempor de incurreret o
+            fore pariatur de distinguantur, enim te appellat. Iis tamen voluptate
+            constias, quo illum nescius eiusmod an do noster in legam fabulas
+            iis eiusmod. O fugiat arbitror possumus quo ita tempor de o
             fore pariatur de distinguantur, enim te appellat.
+            <img src="images/tree6.png" alt="image of a palm tree">
             </p>
+            <p>
+              Irure deserunt ad relinqueret ea ullamco labore quae est labore. De iudicem
+              imitarentur, nescius sed velit. Doctrina incurreret fugiat cillum tempor ut aute eu iudicem ubi
+              quis tamen voluptate. Incididunt illum offendit instituendarum,an do noster imitarentu vidisse nulla incididunt tamen
+              in incurreret magna excepteur ita te eram do cillum.Sunt arbitror ingeniis ut
+              incurreret tempor iudicem. Esse a voluptatee iusmodhic illum iis consequat te tempor,
+              nescius ipsum deserunt eiusmod aut magna instituendarum arbitror iudicem tempor ingeniis.
         </div>
       </main>
       <footer>
