minor cosmetic changes

--- a/index.html
+++ b/index.html
@@ -53,13 +53,7 @@
             offendit qui sunt multos. In esse quamquam ad mentitum quis laboris cupidatat eu
             vidisse.
           </p>
-          <p>
-            Quo quae vidisse o iis summis proident deserunt. Et quis eu quorum, noster
-            singulis ad aliqua culpa. Ea magna malis iis nescius iis ubi consequat de
-            quibusdam.
-            <img src="images/tree7.png" alt="image of a palm tree">
-          </p>
-        </div><!--close div 1-->
+        </div><!--close column_1-->
         <div class="three_columns" id="column_2">
           <p>
             Eu summis doctrina mentitum. Ab o nisi minim irure. Ipsum ut occaecat hic enim,
@@ -70,11 +64,10 @@
             <div id="img_1">
               <img src="images/image1.jpg" alt="image of a fallen tree">
               <img src="images/image2.jpg" alt="image of a fallen tree">
-              <img src="images/image3.jpg" alt="image of a fallen tree">
               <img src="images/image4.jpg" alt="image of a fallen tree">
               <img src="images/image5.jpg" alt="image of a fallen tree">
             </div>
-        </div>
+        </div><!--close column_2-->
         <div class="three_columns" id="column_3">
           <p>
             <img src="images/tree2.png" alt="image of a smiling evergreen tree">
@@ -106,23 +99,12 @@
             constias, quo illum nescius eiusmod an do noster in legam fabulas
             iis eiusmod. O fugiat arbitror possumus quo ita tempor de o
             fore pariatur de distinguantur, enim te appellat.
-            <img src="images/tree6.png" alt="image of a palm tree">
-            </p>
-            <p>
-              Irure deserunt ad relinqueret ea ullamco labore quae est labore. De iudicem
-              imitarentur, nescius sed velit. Doctrina incurreret fugiat cillum tempor ut aute eu iudicem ubi
-              quis tamen voluptate. Incididunt illum offendit instituendarum,an do noster imitarentu vidisse nulla incididunt tamen
-              in incurreret magna excepteur ita te eram do cillum.Sunt arbitror ingeniis ut
-              incurreret tempor iudicem. Esse a voluptatee iusmodhic illum iis consequat te tempor,
-              nescius ipsum deserunt eiusmod aut magna instituendarum arbitror iudicem tempor ingeniis.
-        </div>
+          </p>
+        </div><!--close column_3-->
       </main>
       <footer>
         <h3>&copy;The Tree-inator 2018</h3>
       </footer>
     </div><!--close container-->
-
-
-
   </body>
 </html>
