--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <link href="styles/style.css" rel="stylesheet">
     <meta charset="utf-8">
-    <title>Liquid Float</title>
+    <title>Tree-inator</title>
   </head>
   <body>
     <div id="container">
