--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <li><a href="#">HOME</a></li>
           <li><a href="#">SERVICES</a></li>
           <li><a href="#">ABOUT</a></li>
-          <li><a href="pages/contact.html">CONTACT</a></li>
+          <li><a href="php/mail_form_v2.php">CONTACT</a></li>
         </ul>
       </nav>
       <main>
@@ -42,17 +42,12 @@
             commodo, duis senserit est exercitation se senserit et sint senserit te de
             proident tractavissent.
           </p>
-          <p>
-            <img src="images/tree4.png" alt="image of two tree">
-            Ab irure pariatur. Eu enim iudicem, ne id export excepteur. Qui aliquip
-            familiaritatem, labore doctrina iis elit fugiat.Ubi hic summis quem veniam, id
-            occaecat ab officia quo noster excepteur te quis enim, legam se do export
-            deserunt, laborum relinqueret id voluptate, ad nescius arbitrantur qui non quis
-            concursionibus de non quorum incididunt laboris. Aute te nescius ubi labore,
-            singulis e dolor laboris ubi in eu graviterque, ab fugiat fidelissimae. Magna
-            offendit qui sunt multos. In esse quamquam ad mentitum quis laboris cupidatat eu
-            vidisse.
-          </p>
+            <video controls width="100%" poster="images/rat.png" preload="auto">
+              <source src="video/rat.mp4" type="video/mp4">
+              <source src="video/rat.ogv" type="video/ogv">
+              <source src="video/rat.webm" type="video/webm">
+              <p><code>Video</code> not supported by browser</p>
+            </video>
         </div><!--close column_1-->
         <div class="three_columns" id="column_2">
           <p>
