--- a/pages/contact.html
+++ b/pages/contact.html
@@ -36,6 +36,15 @@
                 <td class="formInputs"><textarea name="comment" cols="50" rows="10" id="comment"></textarea></td>
               </tr>
               <tr>
+                <td></td>
+                <td class="formInputs">
+                  <fieldset><legend class="legend">Subscribe</legend>
+                    <label for="subscribeYes"> Yes </label><input type="radio" name="subscribe" value="subscribeYes" id="subscribeYes">
+                    <label for ="subscribeNo"> No </label><input type="radio" name="subscribe" value="subscribeNo" id="subscribeNo">
+                  </fieldset>
+                </td>
+              </tr>
+              <tr>
                 <td><input type="reset" class="formButton"></td>
                 <td><input type="submit" class="formButton" value="Submit Form"></td>
               </tr>
